Refactor Infrastructure For Running JDI Tests
Bug: NA
Test: NA
Change-Id: I9d9f898367f0c84a34f216a7a42f4c77614d6147